Remove warnings (mostly in test classes)